<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <parent>
    <groupId>ai.timefold.solver</groupId>
    <artifactId>timefold-solver-build-parent</artifactId>
    <version>999-SNAPSHOT</version>
  </parent>

  <modelVersion>4.0.0</modelVersion>
  <artifactId>timefold-solver-python-parent</artifactId>
  <packaging>pom</packaging>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <version.apache.collections4>4.4</version.apache.collections4>
    <maven.compiler.release>17</maven.compiler.release>
    <sonar.moduleKey>${project.artifactId}</sonar.moduleKey>
    <sonar.organization>timefold</sonar.organization>
    <sonar.sources>src/main/java,src/main/python</sonar.sources>
    <sonar.tests>src/test/java,tests</sonar.tests>
    <sonar.python.version>3.9,3.10,3.11</sonar.python.version>
    <sonar.python.coverage.reportPaths>target/coverage.xml</sonar.python.coverage.reportPaths>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>ai.timefold.solver</groupId>
        <artifactId>jpyinterpreter</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-collections4</artifactId>
        <version>${version.apache.collections4}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <modules>
    <module>jpyinterpreter</module>
    <module>timefold-solver-python-core</module>
  </modules>

</project>
